# fintech-rust

./: Cargo.toml  README.md
algo_structs/src/: main.rs
algo_structs/src/core/: matching.rs
fundamentals/src/tx/: mod.rs
octopus-cli/: Cargo.toml
octopus-cli/src/: main.rs  trading_platform.rs
octopus-cli/src/core/: matching.rs
octopus-common/: Cargo.toml
octopus-common/src/: types.rs
octopus-web/: Cargo.toml
octopus-web/src/: main.rs
shared_marketplace/octopus-cli/src/: main.rs
shared_marketplace/octopus-common/src/: tx.rs  types.rs
shared_marketplace/octopus-web/: Cargo.toml
shared_marketplace/octopus-web/src/: accounting.rs  lib.rs  main.rs  matching.rs  trading_platform.rs
src/: accounting.rs  main.rs  trading_platform.rs  tx.rs
src/accounts/: mod.rs
src/core/: matching.rs  types.rs
src/errors/: mod.rs
