[package]
name = "octopus-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
octopus-common = { path = "../octopus-common" }
pretty_env_logger = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.28.2", features = ["full"] }
warp = "0.3"
